--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 #sim-matrix
 /word-recommender/sim_matrix.csv
 /word-recommender/movie_aspects_matrix.csv
+/word-recommender/movie_aspects_matrix_5.csv
